[*] Media controller (tsop)
